refacturando el style
cambiando el estilo y diseño

--- a/src/app/dashboard/persona/createperson/createperson.component.html
+++ b/src/app/dashboard/persona/createperson/createperson.component.html
@@ -181,9 +181,9 @@
                           </div>
 
                             <div class="boton">
-                              <button class="btn1"  type="cancel"  mat-raised-button color="warn" routerLink="../listperson" ><!-- (click)="enableDisableRule()"    [ngClass]="{'primary' : toggle, 'red': !toggle}" -->
-                                <mat-icon>cancel</mat-icon>Cancelar</button>
-                              <button class="btn1" id="btnSubmit" type="submit"  mat-raised-button color="primary" ><!-- (click)="enableDisableRule()"    [ngClass]="{'primary' : toggle, 'red': !toggle}" -->
+                              <button class="btn1"  type="cancel"  mat-raised-button color="warn"  (click)="cancelar()">
+                                <mat-icon>cancel</mat-icon>CANCELAR</button>
+                              <button class="btn2" id="btnSubmit" type="submit"  mat-raised-button >
                               <mat-icon>save</mat-icon>GUARDAR</button>
 
                             </div>
