--- a/src/app/dashboard/usuario/modifyusers/modifyusers.component.html
+++ b/src/app/dashboard/usuario/modifyusers/modifyusers.component.html
@@ -9,7 +9,7 @@
      <mat-form-field class="createUser" fxFlex>
        <mat-label class="label">Id Usuario</mat-label>
 
-         <input matInput placeholder = "Id Usuario" formControlName="idUser" readonly onmousedown="return false;">
+         <input matInput placeholder = "Id Usuario" formControlName="idUser" readonly onmousedown="false;">
      </mat-form-field>
     </div>
     <!-- <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
@@ -22,7 +22,7 @@
      <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
      <mat-form-field class="createUser" fxFlex>
        <mat-label class="label">Abreviatura</mat-label>
-         <input matInput placeholder = "Abreviatura" formControlName="abreviatura" readonly onmousedown="return false;">
+         <input matInput placeholder = "Abreviatura" formControlName="abreviatura" readonly onmousedown="false;">
      </mat-form-field>
 
 
